Proper Unit Tests for EScheme!
Added comprehensive unit tests for EScheme to `/src/test/`!

Implementing these was a fantastic exercise, given that (while largely written without error) EScheme still had a number of bugs left to squash. As such, the following were additional changes I made in the process of writing the unit tests:

1. `with-output-to-file` and `with-input-from-file` actually work now

2. Fixed a bug where `string-split` would not return the last character in the string if given no "splitter" 2nd arg & the string didn't end in a 32bit unicode value

3. `string=?`, etc. now all just return `#t` if only given 1 arg (instead of throwing an error)

4. Fixed a few minor Java formatter-token-processing bugs in the EScheme's formatter (e.g. for `stringf` etc.)

5. The `meta-object` `help` entry now mentions differences from modules

6. Improved debugging for macros (they now print their name more clearly in macro error messages)

7. Fixed `move-file!` bug where it sometimes failed to properly create intermediate directories

8. Improved Java error reporting from the `file-` prefixed primitives

9. Several thread primitives that used to raise fatal Java errors now just return a boolean success status

10. added the `*min-priority*` & `*max-priority*` thread-based global variables

11. Fixed `read-line` bug where last line wouldn't get read if it didn't end with a newline

12. Added `help` entries for `char-lower-case?` `char-alphanumeric?`

13. Added in `inexact->exact`, `exact->inexact`, `numerator`, `denominator`, `integral`, `fractional` primitives

14. Added the `hashmap-val?` primitive

15. Fixed bug where `peek-port` didn't report `#eof` upon 1st encounter (only on repeat calls).

16. Fixed a bug where `conj` only accepted 2 args (now properly overloads for 3)

17. Updated the `number` `help` section to properly reflect EScheme's rich number system.

18. Fixed a bug with complex numbers where literals with inexact components could sometimes fail

19. C